--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,15 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
 
+    // AWS
     implementation group: 'io.awspring.cloud', name: 'spring-cloud-aws-starter-s3', version: '3.2.1'
+
+    // Apache Tika 파일 관련
+    implementation group: 'org.apache.tika', name: 'tika-core', version: '2.9.2'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
